data/test/type_check/fail/issue_239a.v
genvar i;
wire x = i;
